问题修复，消息红点添加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">瀚能</string>
+    <string name="app_name">瀚能设计帮</string>
 
     <string-array name="home_page_titles">
         <item>热点</item>
